[project]
dependencies = [
    "requests>=2.31.0",
    "peewee>=3.16.3",
    "bs4>=0.0.1",
    "imagehash>=4.3.1",
    "tqdm>=4.66.1",
    "flask>=3.0.0",
    "timeago>=1.0.16",
    "gunicorn>=21.2.0",
    "gevent>=23.9.1",
    "plotly>=5.18.0",
    "pandas>=2.1.2",
    "scipy>=1.11.3",
    "mistletoe>=1.2.1",
    "cython>=3.0.5",
    "split-file-reader>=0.1.4",
    "ftfy>=6.1.1",
    "rarfile>=4.1",
    "lxml>=4.9.3",
    "cssselect>=1.2.0",
    "python-dateutil>=2.8.2",
]
requires-python = ">=3.10,<3.11"
